# beacon-chain-oracle-rs

./: Cargo.toml  README.md  beacon_oracle_tool.rs  requirements.txt  script.py
src/: main.rs
